# actix-web-dev-tools

./: Cargo.toml
migrations/2021-04-15-201113_initial/: up.sql
src/: .db.rs.swp  error.rs  lib.rs  schema.rs
src/auth/: db.rs  mod.rs  models.rs
uploader/: Cargo.toml  Dockerfile  docker-compose.yml
uploader/migrations/2021-05-05-150605_uploaderInitial/: down.sql  up.sql
uploader/src/: auth.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  schema.rs
