[package]
name = "actix_web_dev"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
env_logger = "0.8.3"
dotenv = "0.15.0"
actix-web-httpauth = "0.5.1"
futures-util = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
actix-identity = "0.3.1"
jsonwebtoken = "7.2.0"
serde_json = "1.0"
reqwest = { version = "0.10.10", features = ["json"] }
tokio-compat-02 = "0.2.0"
chrono = { version = "0.4.10", features = ["serde"] }
actix-service = "1.0.6"
futures = "0.3.1"
diesel_migrations = "1.4.0"
rand = "0.8.3"
actix-http = "2.2.0"
lazy_static = "1.4.0"
url = "2.2.1"
r2d2 = "0.8.9"
